--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
+        "bennett-treptow/laravel-migration-generator": "^4.4",
         "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
