--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "reliese/laravel": "^1.3"
     },
     "require-dev": {
         "bennett-treptow/laravel-migration-generator": "^4.4",
