--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "reliese/laravel": "^1.3"
+        "reliese/laravel": "^1.3",
+        "yajra/laravel-datatables-oracle": "^11.1"
     },
     "require-dev": {
         "bennett-treptow/laravel-migration-generator": "^4.4",
