--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@popperjs/core": "^2.11.8",
         "bootstrap": "5.3.3",
+        "cropperjs": "^1.6.2",
         "simplebar": "^6.2.5"
     }
 }
