--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.0",
         "intervention/image-laravel": "*",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
