--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "require-dev": {
         "bennett-treptow/laravel-migration-generator": "^4.4",
         "fakerphp/faker": "^1.23",
+        "kitloong/laravel-migrations-generator": "^7.0",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
